Feat: 更新 index.html profile 區塊

--- a/index.html
+++ b/index.html
@@ -16,27 +16,38 @@
       />
     </header>
     <section class="container">
-      <h2 class="title title_dark">個人資料<span>PROFILE</span></h2>
-      <h3>陳政丰 Tim Chen</h3>
-      <ul>
-        <li>1998-</li>
-        <li>應屆畢業生 / 初階前端工程師</li>
-      </ul>
-      <p>朝前端工程師邁進中 / 立志不要寫糙 code</p>
-      <p>網站開發獨立接案中...</p>
+      <h2 class="title title_dark">
+        個人資料<span class="title_dark_en">PROFILE</span>
+      </h2>
+      <div class="profile">
+        <h3>陳政丰 Tim Chen</h3>
+        <ul class="profile_content">
+          <li>1998-</li>
+          <li>應屆畢業生 / 初階前端工程師</li>
+        </ul>
+        <p>朝前端工程師邁進中 / 立志不要寫糙 code</p>
+        <p>網站開發獨立接案中...</p>
+      </div>
     </section>
     <section class="container">
-      <h2 class="title title_light">作品集<span>Portfolio</span></h2>
+      <h2 class="title title_light">
+        作品集<span class="title_light_en">Portfolio</span>
+      </h2>
     </section>
     <section class="container">
-      <h2 class="title title_dark">學歷<span>EDUCATION</span></h2>
+      <h2 class="title title_dark">
+        學歷<span class="title_dark_en">EDUCATION</span>
+      </h2>
       <ul>
         <li>國立虎尾科技大學 資訊管理所 碩士學位</li>
         <li>國立虎尾科技大學 資訊管理系 學士學位</li>
       </ul>
     </section>
     <section class="container">
-      <h2 class="title title_light">技能<span>SKILLS</span></h2>
+      <h2 class="title title_light">
+        技能
+        <span class="title_light_en">SKILLS</span>
+      </h2>
       <ul>
         <li>Vue</li>
         <li>CSS3 / SCSS</li>
@@ -50,7 +61,9 @@
       </ul>
     </section>
     <section class="container">
-      <h2 class="title title_dark">工作經驗<span>WORK EXPERIENCE</span></h2>
+      <h2 class="title title_dark">
+        工作經驗<span class="title_dark_en">WORK EXPERIENCE</span>
+      </h2>
       <ul>
         <li>眾點資訊有限公司 助理工程師實習｜2019/10-2020/06</li>
         <li>獨立接案 康仕儷有限公司 官方網站建置｜2018</li>
@@ -59,7 +72,9 @@
       </ul>
     </section>
     <footer class="container">
-      <h2 class="title title_light">聯絡方式<span>CONTACT METHOD</span></h2>
+      <h2 class="title title_light">
+        聯絡方式<span class="title_light_en">CONTACT METHOD</span>
+      </h2>
       <ul>
         <li>
           Mail：
