--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <p>網站開發獨立接案中...</p>
       </div>
     </section>
-    <section class="container">
+    <section class="portfolio">
       <h2 class="title title_light">
         作品集<span class="title_light_en">Portfolio</span>
       </h2>
