Feat: 更新 index.html eduction 區塊

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
       <h2 class="title title_dark">
         學歷<span class="title_dark_en">EDUCATION</span>
       </h2>
-      <ul>
-        <li>國立虎尾科技大學 資訊管理所 碩士學位</li>
-        <li>國立虎尾科技大學 資訊管理系 學士學位</li>
+      <ul class="eduction">
+        <li class="eduction_item">國立虎尾科技大學 資訊管理所 碩士學位</li>
+        <li class="eduction_item">國立虎尾科技大學 資訊管理系 學士學位</li>
       </ul>
     </section>
     <section class="container">
