Feat: 更新 SCSS skills

--- a/index.html
+++ b/index.html
@@ -43,22 +43,24 @@
         <li class="eduction_item">國立虎尾科技大學 資訊管理系 學士學位</li>
       </ul>
     </section>
-    <section class="container">
-      <h2 class="title title_light">
-        技能
-        <span class="title_light_en">SKILLS</span>
-      </h2>
-      <ul>
-        <li>Vue</li>
-        <li>CSS3 / SCSS</li>
-        <li>JavaScript(ES6+)</li>
-        <li>Responsive Web Design</li>
-        <li>Git</li>
-        <li>jQuery / Bootstrap</li>
-        <li>ASP.NET Core</li>
-        <li>Line Bot</li>
-        <li>Python</li>
-      </ul>
+    <section class="skills">
+      <div class="container">
+        <h2 class="title title_light">
+          技能
+          <span class="title_light_en">SKILLS</span>
+        </h2>
+        <ul>
+          <li>Vue</li>
+          <li>CSS3 / SCSS</li>
+          <li>JavaScript(ES6+)</li>
+          <li>Responsive Web Design</li>
+          <li>Git</li>
+          <li>jQuery / Bootstrap</li>
+          <li>ASP.NET Core</li>
+          <li>Line Bot</li>
+          <li>Python</li>
+        </ul>
+      </div>
     </section>
     <section class="container">
       <h2 class="title title_dark">
