Feat: 更新 SCSS skills 設定

--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
       </ul>
     </section>
     <section class="skills">
-      <div class="container">
+      <div class="skills_container">
         <h2 class="title title_light">
           技能
           <span class="title_light_en">SKILLS</span>
         </h2>
-        <ul>
+        <ul class="skills_content">
           <li>Vue</li>
           <li>CSS3 / SCSS</li>
           <li>JavaScript(ES6+)</li>
