Feat: 更新 SCSS work 設定

--- a/index.html
+++ b/index.html
@@ -66,11 +66,15 @@
       <h2 class="title title_dark">
         工作經驗<span class="title_dark_en">WORK EXPERIENCE</span>
       </h2>
-      <ul>
-        <li>眾點資訊有限公司 助理工程師實習｜2019/10-2020/06</li>
-        <li>獨立接案 康仕儷有限公司 官方網站建置｜2018</li>
-        <li>獨立接案 國立虎尾科技大學 校園授權軟體專區前端設計｜2017</li>
-        <li>國立虎尾科技大學 電子計算機中心 專案工讀生</li>
+      <ul class="work">
+        <li class="work_item">
+          眾點資訊有限公司 助理工程師實習｜2019/10-2020/06
+        </li>
+        <li class="work_item">獨立接案 康仕儷有限公司 官方網站建置｜2018</li>
+        <li class="work_item">
+          獨立接案 國立虎尾科技大學 校園授權軟體專區前端設計｜2017
+        </li>
+        <li class="work_item">國立虎尾科技大學 電子計算機中心 專案工讀生</li>
       </ul>
     </section>
     <footer class="container">
