Feat: 更新 SCSS contact 設定

--- a/index.html
+++ b/index.html
@@ -77,34 +77,36 @@
         <li class="work_item">國立虎尾科技大學 電子計算機中心 專案工讀生</li>
       </ul>
     </section>
-    <footer class="container">
-      <h2 class="title title_light">
-        聯絡方式<span class="title_light_en">CONTACT METHOD</span>
-      </h2>
-      <ul>
-        <li>
-          Mail：
-          <a href="mailto:a0963573232@gmail.com"> a0963573232@gmail.com </a>
-        </li>
-        <li>Yunlin, Taiwan</li>
-      </ul>
-      <ul>
-        <li>
-          <a href="#">
-            <img src="./images/facebook.svg" alt="facebook link" />
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <img src="./images/line.svg" alt="line link" />
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <img src="./images/codepen.png" alt="codepen link" />
-          </a>
-        </li>
-      </ul>
+    <footer class="contact">
+      <div class="contact_container">
+        <h2 class="title title_light">
+          聯絡方式<span class="title_light_en">CONTACT METHOD</span>
+        </h2>
+        <ul>
+          <li>
+            Mail：
+            <a href="mailto:a0963573232@gmail.com"> a0963573232@gmail.com </a>
+          </li>
+          <li>Yunlin, Taiwan</li>
+        </ul>
+        <ul>
+          <li>
+            <a href="#">
+              <img src="./images/facebook.svg" alt="facebook link" />
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./images/line.svg" alt="line link" />
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./images/codepen.png" alt="codepen link" />
+            </a>
+          </li>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
