Docs: 移除三張社群軟體圖示

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         <h3>陳政丰 Tim Chen</h3>
         <ul class="profile_content">
           <li>1998-</li>
-          <li>應屆畢業生 / 初階前端工程師</li>
+          <li>Yunlin, Taiwan</li>
+          <li>應屆畢業生 / 前端工程師</li>
         </ul>
         <p>朝前端工程師邁進中 / 立志不要寫糙 code</p>
         <p>網站開發獨立接案中...</p>
@@ -84,29 +85,21 @@
         </h2>
         <ul>
           <li>
-            Mail：
-            <a href="mailto:a0963573232@gmail.com"> a0963573232@gmail.com </a>
-          </li>
-          <li>Yunlin, Taiwan</li>
-        </ul>
-        <ul>
-          <li>
-            <a href="#">
-              <img src="./images/facebook.svg" alt="facebook link" />
-            </a>
+            <a href="#"><i class="fas fa-envelope"></i></a>
           </li>
           <li>
-            <a href="#">
-              <img src="./images/line.svg" alt="line link" />
-            </a>
+            <a href="#"><i class="fab fa-facebook-square"></i></a>
           </li>
           <li>
-            <a href="#">
-              <img src="./images/codepen.png" alt="codepen link" />
-            </a>
+            <a href="#"><i class="fab fa-line"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fab fa-codepen"></i></a>
           </li>
         </ul>
       </div>
     </footer>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js"></script>
   </body>
 </html>
