Feat: 更新 footer 區塊

--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
           <span class="title_light_en">SKILLS</span>
         </h2>
         <ul class="skills_content">
-          <li>Vue</li>
+          <li>Vue2 / 3</li>
           <li>CSS3 / SCSS</li>
           <li>JavaScript(ES6+)</li>
           <li>Responsive Web Design</li>
-          <li>Git</li>
+          <li>Git / Github</li>
           <li>jQuery / Bootstrap</li>
           <li>ASP.NET Core</li>
           <li>Line Bot</li>
@@ -83,18 +83,51 @@
         <h2 class="title title_light">
           聯絡方式<span class="title_light_en">CONTACT METHOD</span>
         </h2>
-        <ul>
+        <ul class="contact_content">
           <li>
-            <a href="#"><i class="fas fa-envelope"></i></a>
+            <a href="mailto:a0963573232@gmail.com" class="contact_content_item">
+              <i class="fas fa-envelope"></i>
+            </a>
           </li>
           <li>
-            <a href="#"><i class="fab fa-facebook-square"></i></a>
+            <a
+              href="https://www.facebook.com/tim.chen.37051"
+              class="contact_content_item"
+              target="_blank"
+              rel="noreferrer noopenner"
+            >
+              <i class="fab fa-facebook-square"></i>
+            </a>
           </li>
           <li>
-            <a href="#"><i class="fab fa-line"></i></a>
+            <a
+              href="https://line.me/ti/p/kw6N40kdgT"
+              class="contact_content_item"
+              target="_blank"
+              rel="noreferrer noopenner"
+            >
+              <i class="fab fa-line"></i>
+            </a>
           </li>
           <li>
-            <a href="#"><i class="fab fa-codepen"></i></a>
+            <a
+              href="https://codepen.io/timchen0607"
+              class="contact_content_item"
+              target="_blank"
+              rel="noreferrer noopenner"
+            >
+              <i class="fab fa-codepen"></i>
+            </a>
+          </li>
+          <li>
+            <a
+              href="https://medium.com/@timchen0607"
+              class="contact_content_item"
+              target="_blank"
+              rel="noreferrer noopenner"
+            >
+              <i class="fab fa-medium"></i>
+            </a>
           </li>
         </ul>
       </div>
