Style: 修改 index.html skills 區塊的文字

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <li>Vue2 / 3</li>
           <li>CSS3 / SCSS</li>
           <li>JavaScript(ES6+)</li>
-          <li>Responsive Web Design</li>
+          <li>HTML5 / RWD</li>
           <li>Git / Github</li>
           <li>jQuery / Bootstrap</li>
           <li>ASP.NET Core</li>
